<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/explainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/explainText"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/resetNum"
        android:textColor="@color/black"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/timerStartBtn"
        android:layout_width="320dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countNum"
        android:text="@string/pressToStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@color/startBtnColor"/>

    <Button
        android:id="@+id/timerStopBtn"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="200dp"
        android:background="@color/btnColor"
        android:text="@string/canYouText"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerStartBtn" />


    <Button
        android:id="@+id/stopBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/noColor"
        android:text="@string/stopText"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/timerStopBtn"
        app:layout_constraintTop_toBottomOf="@+id/timerStopBtn" />

    <Button
        android:id="@+id/continueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/noColor"
        android:text="@string/continueText"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/timerStopBtn"
        app:layout_constraintTop_toBottomOf="@+id/timerStopBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>